# nvim-lang-core

./: Cargo.toml  README.md  nvim_language_dictionary.txt
benches/: my_benchmark.rs
src/: lang_tool.rs  lang_tool_client.rs  lib.rs  nvim_lang.rs  nvim_lang_core.rs  nvim_lang_dictionary.rs  programming_lang.rs
src/code/: code_file.rs  mod.rs  programming.rs
src/common/: logger.rs  mod.rs  string.rs  test.rs
src/language_tool/: language_tool_file.rs  mod.rs
src/modules/: mod.rs
src/nvim_language/: core.rs  file.rs  line.rs  mod.rs
tests/: code_lang_tests.rs  code_string_tests.rs  common_tests.rs  language_dictionary_tests.rs  lib.rs
tests/code_file_tests/: code_file_code_tests.rs  code_file_comment_tests.rs  code_file_string_tests.rs  mod.rs
tests/file_test_cases/: person.rs
tests/file_test_cases/codes/: simple_code.rs
tests/file_test_cases/comments/: comment_block.rs  full_comment.rs  multiple_comments.rs
tests/file_test_cases/lua/: edge_case.lua
tests/file_test_cases/lua/codes/: multiple_code.lua  simple_code.lua
tests/file_test_cases/lua/comments/: comment_block.lua  full_comment.lua  multiple_comments.lua  simple_one_line_comment.lua
tests/file_test_cases/lua/strings/: multiple_strings.lua  simple_string.lua
tests/file_test_cases/rust/: edge_case.rs
tests/file_test_cases/rust/codes/: multiple_code.rs
tests/file_test_cases/rust/comments/: simple_one_line_comment.rs
tests/file_test_cases/rust/strings/: multiple_strings.rs  simple_string.rs
