[package]
name = "nvim-lang-core"
version = "0.1.0"
edition = "2021"

#Note* that 'lib' was added to make tests to work. Remove lib if rust module does not work wiht nvim lua.
#https://github.com/rust-lang/cargo/issues/6659 
[lib]
crate-type = ["cdylib", "lib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvim-oxi = { version = "0.3", features = ["neovim-0-9"] }
log = "0.4"
fast_log = "1"
serde = "1"
serde_json = "1"
# serde_with = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
stopwatch = "0.0.7"

# [dev-dependencies]
# criterion = "0.3"
#
# [[bench]]
# name = "my_benchmark"
# harness = false
